bug fixing and featured ad ranking & FAQ page updated

--- a/web/html_components/member/featuredad/accountsettings.html
+++ b/web/html_components/member/featuredad/accountsettings.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row margin-top-align">
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-        <ul class="featured-ad-left-sidebar-ul featured-ad-left-sidebar-margin-top-align">
+        <ul class="featured-ad-left-sidebar-ul">
             <li><a class="active" [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
             <li><a>Payment</a></li>
