--- a/web/html_components/member/featuredad/faq.html
+++ b/web/html_components/member/featuredad/faq.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row margin-top-align">
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-        <ul class="featured-ad-left-sidebar-ul featured-ad-left-sidebar-margin-top-align">
+        <ul class="featured-ad-left-sidebar-ul">
             <li><a class="active" [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
             <li><a>Payment</a></li>
@@ -11,7 +11,97 @@
     </div>
 
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
-        FAQ page
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h2 class="featured-ad-heading">FAQ</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h2 class="featured-ad-label">What is FAQ</h2>
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <p class="featured-ad-paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Praesent a sodales ante. In sit amet nulla id nisi faucibus tincidunt. Ut convallis, 
+                    tortor id porttitor convallis, eros lorem lobortis ligula, et feugiat mi elit nec mauris.
+                    Nam quis ultricies nibh. Aliquam tincidunt dapibus malesuada. Aenean risus massa, accumsan
+                    non lacus ac, euismod mattis metus. Aliquam condimentum leo id eros elementum congue. 
+                    Nullam molestie nulla nec dolor pretium porttitor. Nunc hendrerit suscipit ex quis semper. 
+                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                    Mauris sit amet turpis lacus. Proin vulputate laoreet iaculis. Nulla id orci viverra, 
+                    feugiat felis at, fermentum risus. In facilisis lorem ac nisl pretium pulvinar. Quisque 
+                    vulputate quam sed sem fringilla, ac porta lorem tristique.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h2 class="featured-ad-label">Why FAQ?</h2>
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <p class="featured-ad-paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Praesent a sodales ante. In sit amet nulla id nisi faucibus tincidunt. Ut convallis, 
+                    tortor id porttitor convallis, eros lorem lobortis ligula, et feugiat mi elit nec mauris.
+                    Nam quis ultricies nibh. Aliquam tincidunt dapibus malesuada. Aenean risus massa, accumsan
+                    non lacus ac, euismod mattis metus. Aliquam condimentum leo id eros elementum congue. 
+                    Nullam molestie nulla nec dolor pretium porttitor. Nunc hendrerit suscipit ex quis semper. 
+                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                    Mauris sit amet turpis lacus. Proin vulputate laoreet iaculis. Nulla id orci viverra, 
+                    feugiat felis at, fermentum risus. In facilisis lorem ac nisl pretium pulvinar. Quisque 
+                    vulputate quam sed sem fringilla, ac porta lorem tristique.</p>
+                <p class="featured-ad-paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Praesent a sodales ante. In sit amet nulla id nisi faucibus tincidunt. Ut convallis, 
+                    tortor id porttitor convallis, eros lorem lobortis ligula, et feugiat mi elit nec mauris.
+                    Nam quis ultricies nibh. Aliquam tincidunt dapibus malesuada. Aenean risus massa, accumsan
+                    non lacus ac, euismod mattis metus. Aliquam condimentum leo id eros elementum congue. 
+                    Nullam molestie nulla nec dolor pretium porttitor. Nunc hendrerit suscipit ex quis semper. 
+                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                    Mauris sit amet turpis lacus. Proin vulputate laoreet iaculis. Nulla id orci viverra, 
+                    feugiat felis at, fermentum risus. In facilisis lorem ac nisl pretium pulvinar. Quisque 
+                    vulputate quam sed sem fringilla, ac porta lorem tristique.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h2 class="featured-ad-label">Placing and Managing Adverts</h2>
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <p class="featured-ad-paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Praesent a sodales ante. In sit amet nulla id nisi faucibus tincidunt. Ut convallis, 
+                    tortor id porttitor convallis, eros lorem lobortis ligula, et feugiat mi elit nec mauris.
+                    Nam quis ultricies nibh. Aliquam tincidunt dapibus malesuada. Aenean risus massa, accumsan
+                    non lacus ac, euismod mattis metus. Aliquam condimentum leo id eros elementum congue. 
+                    Nullam molestie nulla nec dolor pretium porttitor. Nunc hendrerit suscipit ex quis semper. 
+                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                    Mauris sit amet turpis lacus. Proin vulputate laoreet iaculis. Nulla id orci viverra, 
+                    feugiat felis at, fermentum risus. In facilisis lorem ac nisl pretium pulvinar. Quisque 
+                    vulputate quam sed sem fringilla, ac porta lorem tristique.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h2 class="featured-ad-label">How it Works?</h2>
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <p class="featured-ad-paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Praesent a sodales ante. In sit amet nulla id nisi faucibus tincidunt. Ut convallis, 
+                    tortor id porttitor convallis, eros lorem lobortis ligula, et feugiat mi elit nec mauris.
+                    Nam quis ultricies nibh. Aliquam tincidunt dapibus malesuada. Aenean risus massa, accumsan
+                    non lacus ac, euismod mattis metus. Aliquam condimentum leo id eros elementum congue. 
+                    Nullam molestie nulla nec dolor pretium porttitor. Nunc hendrerit suscipit ex quis semper. 
+                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                    Mauris sit amet turpis lacus. Proin vulputate laoreet iaculis. Nulla id orci viverra, 
+                    feugiat felis at, fermentum risus. In facilisis lorem ac nisl pretium pulvinar. Quisque 
+                    vulputate quam sed sem fringilla, ac porta lorem tristique.</p>
+            </div>
+        </div>
     </div>
 </div>
 
