--- a/web/html_components/member/savedads.html
+++ b/web/html_components/member/savedads.html
@@ -26,23 +26,23 @@
                             <img class="img-responsive" src="resources/images/{{product.img}}">
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
-                            <span class="saved-ads-product-description">{{product.description}}</span>
+                            <div class="saved-ads-product-description">{{product.description}}</div>
                         </div>
                     </div>
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                             <span class="saved-ads-product-price-title">Price</span>
+                             <div class="saved-ads-product-price-title">Price</div>
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
-                            <span class="saved-ads-product-price-amount">{{product.price}}</span>
+                            <div class="saved-ads-product-price-amount">{{product.price}}</div>
                         </div>
                     </div>
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                             <span class="saved-ads-product-id-title">Product Id</span>
+                             <div class="saved-ads-product-id-title">Reference Id</div>
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
-                            <span class="saved-ads-product-id">{{product.id}}</span>
+                            <div class="saved-ads-product-id">{{product.id}}</div>
                         </div>
                     </div>
                 </div>
