--- a/web/html_components/member/dashboard.html
+++ b/web/html_components/member/dashboard.html
@@ -1,16 +1,55 @@
+<!--    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
+                <ul class="dashboard-left-sidebar-ul margin-top-align">
+                    <li><a class="active" href="manage-product.jsp">Add Advert</a></li>
+                    <li><a [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
+                    <li><a [routerLink]="['/savedads']" (click)="savedads($event)">Saved Ads</a></li>
+                    <li><a [routerLink]="['/messages']" (click)="messages($event)">Messages</a></li>
+                </ul>
+    </div>-->
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
-        <ul class="dashboard-left-sidebar-ul margin-top-align">
-            <li><a class="active" href="manage-product.jsp">Add Advert</a></li>
-            <li><a [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
-            <li><a [routerLink]="['/savedads']" (click)="savedads($event)">Saved Ads</a></li>
-            <li><a [routerLink]="['/messages']" (click)="messages($event)">Messages</a></li>
-        </ul>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 form-group">
+    <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10 form-group">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h2 class="dashboard-welcome-note">Welcome to Flat Auction</h2>
+                <h2 class="dashboard-welcome-note">DASHBOARD</h2>
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                <a href="">
+                    <div class="dashboard-box-option-layout">
+                        <h2>Messages </h2>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                <a href="">
+                    <div class="dashboard-box-option-layout">
+                        <h2>Manage Advert </h2>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                <a href="">
+                    <div class="dashboard-box-option-layout">
+                        <h2>Account </h2>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                <a href="">
+                    <div class="dashboard-box-option-layout">
+                        <h2>Profile </h2>
+                    </div>
+                </a>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                <a href="">
+                    <div class="dashboard-box-option-layout">
+                        <h2>Search </h2>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
