--- a/web/html_components/member/featuredad/ranking.html
+++ b/web/html_components/member/featuredad/ranking.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row margin-top-align">
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-        <ul class="featured-ad-left-sidebar-ul featured-ad-left-sidebar-margin-top-align">
+        <ul class="featured-ad-left-sidebar-ul">
             <li><a class="active" [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
             <li><a>Payment</a></li>
@@ -11,13 +11,38 @@
     </div>
 
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
-        Ranking page
-        
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h2 class="featured-ad-heading">Ranking</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <table class="featured-ad-stats-table">
+                    <thead>
+                        <tr>
+                            <th>Rank</th>
+                            <th>Advert</th>
+                            <th>Current Bid</th>
+                            <th>Top Bid</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let ranking of rankingList">
+                            <td data-label="Rank">{{ranking.rankId}}</td>
+                            <td data-label="Advert">{{ranking?.product?.title}}</td>
+                            <td data-label="Current Bid">{{ranking?.currentBid?.currencyUnit?.title}}{{ranking?.currentBid?.amount}}</td>
+                            <td data-label="Top Bid">{{ranking?.topBid?.currencyUnit?.title}}{{ranking?.topBid?.amount}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
 
 
-Ranking list<br/>
+<!--Ranking list<br/>
 ============================<br/>
 <ul>
     <li *ngFor="let ranking of rankingList">
@@ -26,7 +51,7 @@ Ranking list<br/>
         current bid : {{ranking?.currentBid?.currencyUnit?.title}}{{ranking?.currentBid?.amount}}
         top bid : {{ranking?.topBid?.currencyUnit?.title}}{{ranking?.topBid?.amount}}
 </li>
-</ul>
+</ul>-->
 
 <!--Account Settings of Featured Ad
 <br/>Default bid per click<br/>
