--- a/web/html_components/member/home/index.html
+++ b/web/html_components/member/home/index.html
@@ -17,12 +17,12 @@
                                 <button type="submit" class="form-control common-custom-button non-member-search-input">Rent</button>
                             </div>
                         </div>
-                        <div class="row form-group">
+<!--                        <div class="row form-group">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                 <h1 for="id" class="text-center landing-page-search-box-header-text">Find your solution</h1>
                                 <h3 for="id" class="text-center landing-page-search-box-small-text">Search properties for sale and to rent</h3>
                             </div>
-                        </div>
+                        </div>-->
                     </form> 
                 </div>
             </div>
