--- a/web/html_components/member/messages.html
+++ b/web/html_components/member/messages.html
@@ -18,17 +18,17 @@
         <div class="row form-group">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="message-inbox-content-layout" *ngFor="let message of inbox">
-                     <div class="row form-group">
+                     <div class="row">
                         <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
-                            <input id="message-inbox-message-id-{{message.id}}" type="checkbox" class="checkbox"> <img class="img-responsive message-inbox-user-image"  src="resources/images/member_icon.png">
+                            <input id="message-inbox-message-id-{{message.id}}" type="checkbox" class="checkbox message-inbox-checkbox"> <img class="img-responsive message-inbox-user-image"  src="resources/images/member_icon.png">
                         </div>
                         <div class="col-xs-7 col-sm-8 col-md-9 col-lg-9">
-                            <div class="row form-group">
+                            <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                     <h3 class="message-inbox-sender-name">{{message.to.firstName}} {{message.to.lastName}}</h3>
                                 </div>
                             </div>
-                            <div class="row form-group">
+                            <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                     <a><h4 class="message-inbox-message-subject">{{message.subject}}</h4></a>
                                 </div>
