--- a/web/html_components/member/myads.html
+++ b/web/html_components/member/myads.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-         <ul class="dashboard-left-sidebar-ul margin-top-align">
+        <ul class="dashboard-left-sidebar-ul margin-top-align">
             <li><a class="active" href="manage-product.jsp">Add Advert</a></li>
             <li><a [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
             <li><a [routerLink]="['/savedads']" (click)="savedads($event)">Saved Ads</a></li>
@@ -26,23 +26,43 @@
                             <img class="img-responsive" src="resources/images/{{product.img}}">
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
-                            <span class="my-ads-product-description">{{product.description}}</span>
+                            <div class="my-ads-product-description">{{product.description}}</div>
                         </div>
                     </div>
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                             <span class="my-ads-product-price-title">Price</span>
+                            <div class="my-ads-product-price-title">Price</div>
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
-                            <span class="my-ads-product-price-amount">{{product.price}}</span>
+                            <div class="my-ads-product-price-amount">{{product.price}}</div>
+                        </div>
+                    </div>
+
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                            <div class="my-ads-product-id-title">Reference Id</div>
+                        </div>
+                        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
+                            <div class="my-ads-product-id">{{product.id}}</div>
                         </div>
                     </div>
                     <div class="row form-group">
-                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                             <span class="my-ads-product-id-title">Product Id</span>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="hr"></div>
                         </div>
-                        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
-                            <span class="my-ads-product-id">{{product.id}}</span>
+                    </div>
+                    <div class="row form-group my-ads-option-links">
+                        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i><a href=""><div class="option"> Edit</div></a>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                            <i class="fa fa-eye" aria-hidden="true"></i><a href=""><div class="option"> View</div></a>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                            <i class="fa fa-picture-o" aria-hidden="true"></i><a href=""><div class="option"> Photo</div></a>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                            <i class="fa fa-line-chart" aria-hidden="true"></i><a href=""><div class="option"> Stats</div></a>
                         </div>
                     </div>
                 </div>
