--- a/web/html_components/member/profile/uploaddocument.html
+++ b/web/html_components/member/profile/uploaddocument.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row margin-top-align">
     <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-        <ul class="profile-left-sidebar-ul margin-top-align">
+        <ul class="profile-left-sidebar-ul">
             <li><a class="active" [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
             <li><a [routerLink]="['/uploadimg']" (click)="uploadimg($event)">Upload Profile Picture</a></li>
             <li><a [routerLink]="['/uploaddocument']" (click)="uploaddocument($event)">Profile Verification</a></li>
