--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
             <div class="product-info-details-left-panel form-group">
-                <div class="row form-group">
+                <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <h1 class="text-center product-info-details-left-panel-heading">Auction</h1>
+                        <h1 class="product-info-details-left-panel-top-heading">Auction</h1>
                     </div>
                 </div>
                 <div class="row form-group">
@@ -36,10 +36,10 @@
                     </div>
                 </div>
                 <div class="row form-group">
-                    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 form-group">
+                    <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 form-group">
                         <input type="text" class="form-control product-info-details-input-custom-field" placeholder="Max Bid">
                     </div>
-                    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+                    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 form-group">
                         <button class="form-control product-info-details-custom-button">Place Bid !</button>
                     </div>
                 </div>
@@ -49,20 +49,20 @@
                     </div>
                 </div>
                 <div class="row form-group">
-                    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 form-group">
+                    <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 form-group">
                         <input type="text" class="form-control product-info-details-input-custom-field" placeholder="Max Bid">
                     </div>
-                    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+                    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 form-group">
                         <button class="form-control product-info-details-custom-button">Place Bid !</button>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
                         <h3 class="product-info-details-left-panel-previous-bids-header">
                             Current Bids
                         </h3>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                    <div class="col-xs-6 col-sm-6 col-md-8 col-lg-8">
                         <div class="product-info-details-left-panel-previous-bids">
                             <a [routerLink]="['/bids']" (click)="showBids($event, 1)">{{product.totalBids}}</a>
                         </div>
@@ -72,7 +72,7 @@
             <div class="product-info-details-left-panel">
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <h3 class="product-info-details-left-panel-heading">This property is marketed by:</h3>
+                        <h3 class="product-info-details-left-panel-middle-heading">This property is marketed by:</h3>
                     </div>
                 </div>
                 <div class="row form-group">
