Account Settings Featured Ad

--- a/web/html_components/member/featuredad/accountsettings.html
+++ b/web/html_components/member/featuredad/accountsettings.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                             <div class="default-bid-per-click">
-                                <input id="default-bid-per-click" name="default-bid-per-click" type="number" class="form-control input-custom-field" value="{{accountSettingFA?.defaultBidPerClick?.amount}}"/> <span>{{accountSettingFA?.defaultBidPerClick?.currencyUnit?.title}}</span>
+                                <input id="default-bid-per-click" name="default-bid-per-click" type="number" class="form-control input-custom-field" value="{{accountSettingFA?.defaultBidPerClick}}"/> <span>{{accountSettingFA?.defaultBidPerClickUnit?.title}}</span>
                             </div>
                         </div>
                     </div>
@@ -35,7 +35,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                             <div class="daily-budget">
-                                <input id="daily-budget" name="daily-budget" type="number" class="form-control input-custom-field" value="{{accountSettingFA?.dailyBudget?.amount}}"/>  <span>{{accountSettingFA?.dailyBudget?.currencyUnit?.title}}</span> 
+                                <input id="daily-budget" name="daily-budget" type="number" class="form-control input-custom-field" value="{{accountSettingFA?.dailyBudget}}"/>  <span>{{accountSettingFA?.dailyBudgetUnit?.title}}</span> 
                             </div>
                         </div>
                     </div>
