member module navigation update

--- a/web/html_components/member/dashboard.html
+++ b/web/html_components/member/dashboard.html
@@ -15,21 +15,21 @@
         </div>
         <div class="row form-group">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                <a href="">
-                    <div class="dashboard-box-option-layout">
-                        <h2>Messages </h2>
-                    </div>
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                <a href="">
+                <a href="manage-advert.jsp">
                     <div class="dashboard-box-option-layout">
                         <h2>Manage Advert </h2>
                     </div>
                 </a>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                <a href="">
+                <a href="message.jsp">
+                    <div class="dashboard-box-option-layout">
+                        <h2>Messages </h2>
+                    </div>
+                </a>
+            </div>            
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
+                <a href="account.jsp">
                     <div class="dashboard-box-option-layout">
                         <h2>Account </h2>
                     </div>
@@ -38,14 +38,14 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                <a href="">
+                <a href="profile.jsp">
                     <div class="dashboard-box-option-layout">
                         <h2>Profile </h2>
                     </div>
                 </a>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 form-group">
-                <a href="">
+                <a href="search.jsp">
                     <div class="dashboard-box-option-layout">
                         <h2>Search </h2>
                     </div>
