--- a/web/html_components/member/message/inbox.html
+++ b/web/html_components/member/message/inbox.html
@@ -1,7 +1,9 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
-            <li><a [routerLink]="['/messages']" (click)="messages($event)">Inbox</a></li>
+            <li><a [routerLink]="['/inbox']" (click)="inbox($event)">Inbox</a></li>
+            <li><a [routerLink]="['/sent']" (click)="sent($event)">Sent</a></li>
+            <li><a [routerLink]="['/saved']" (click)="saved($event)">Saved</a></li>
         </ul>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
@@ -14,7 +16,7 @@
         </div>
         <div class="row form-group">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="message-inbox-content-layout" *ngFor="let message of inbox">
+                <div class="message-inbox-content-layout" *ngFor="let message of messages">
                      <div class="row">
                         <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
                             <input id="message-inbox-message-id-{{message.id}}" type="checkbox" class="checkbox message-inbox-checkbox"> <img class="img-responsive message-inbox-user-image"  src="resources/images/member_icon.png">
