--- a/web/html_components/member/savedads.html
+++ b/web/html_components/member/savedads.html
@@ -1,16 +1,21 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
          <ul class="dashboard-left-sidebar-ul margin-top-align">
-            <li><a class="active" href="manage-product.jsp">Add Advert</a></li>
-            <li><a [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
+            <li><a href="manage-product.jsp">Create Ads</a></li>
+            <li><a class="active" [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
             <li><a [routerLink]="['/savedads']" (click)="savedads($event)">Saved Ads</a></li>
-            <li><a [routerLink]="['/messages']" (click)="messages($event)">Messages</a></li>
+            <li>Featured Ads</li>
+            <li><a [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
+            <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
+            <li><a [routerLink]="['/stats']" (click)="stats($event)">Stats</a></li>
+            <li><a [routerLink]="['/ranking']" (click)="ranking($event)">Ranking</a></li>
+            <li><a [routerLink]="['/faq']" (click)="faq($event)">FAQ</a></li>
         </ul>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
         <div class="row form-group">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h2 class="saved-ads-product-heading">Your Saved Ads</h2>
+                <h2 class="saved-ads-product-heading">Saved Ads</h2>
             </div>
         </div>
         <div class="row form-group">
