--- a/web/html_components/public/basicsearch.html
+++ b/web/html_components/public/basicsearch.html
@@ -1,51 +1,51 @@
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <h1 class="text-center basic-search-header">Basic Search</h1>
-        </div>
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+         <ul class="dashboard-left-sidebar-ul margin-top-align">
+            <li><a [routerLink]="['/basicsearch']" (click)="basicsearch($event)">Basic Search</a></li>
+            <li><a [routerLink]="['/advancedsearch']" (click)="advancedsearch($event)">Advanced Search</a></li>
+        </ul>
     </div>
-    <div class="row form-group">
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
-            <h3 class="basic-search-selection-title">Search Location</h3>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
-            <div class="basic-search-page-search-box-layout">
-                <input #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
-                    [typeahead]="locationList"
-                    typeaheadOptionField="searchString"
-                    class="form-control search-input-field" placeholder="Search for Location">
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h1 class="text-center basic-search-header">Basic Search</h1>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
-            <h3 class="basic-search-selection-title">Radius</h3>
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
+                <h3 class="basic-search-selection-title">Property Type</h3>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
+                <select class="form-control select-custom-field">
+                    <option *ngFor="let productType of productTypeList" value="{{productType.title}}"><a id="{{productType.id}}">{{productType.title}}</a></option>
+                </select> 
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                <h3 class="basic-search-selection-title">Advert Ref#</h3>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
+                <input id="advertRef" class="form-control input-custom-field" placeholder="Enter Your Advert Ref#"> 
+            </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <select class="form-control select-custom-field">
-                <option *ngFor="let radius of radiusList" value="{{radius.title}}"><a id="{{radius.id}}">{{radius.title}}</a></option>
-            </select> 
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
+                <h3 class="basic-search-selection-title">Search Location</h3>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
+                <div class="basic-search-page-search-box-layout">
+                    <input #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
+                        [typeahead]="locationList"
+                        typeaheadOptionField="searchString"
+                        class="form-control search-input-field" placeholder="Search for Location">
+                </div>
+            </div>            
+        </div>        
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-10 col-md-2 col-lg-offset-10 col-lg-2  form-group">
+                <button id="basicSearchButton" class="form-control common-custom-button">Search</button>
+            </div>
         </div>
-    </div>
-    <div class="row form-group">
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
-            <h3 class="basic-search-selection-title">Property Type</h3>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
-            <select class="form-control select-custom-field">
-                <option *ngFor="let productType of productTypeList" value="{{productType.title}}"><a id="{{productType.id}}">{{productType.title}}</a></option>
-            </select> 
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-            <h3 class="basic-search-selection-title">Advert Ref#</h3>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
-            <input id="advertRef" class="form-control input-custom-field" placeholder="Enter Your Advert Ref#"> 
-        </div>
-    </div>
-    <div class="row form-group">
-        <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-10 col-md-2 col-lg-offset-10 col-lg-2  form-group">
-            <button id="basicSearchButton" class="form-control common-custom-button">Search</button>
-        </div>
-    </div>
+    </div>    
 </div>
 <!--
 Basic Search Page<br/>
