user profile is dynamic

--- a/web/html_components/member/manageproduct/index.html
+++ b/web/html_components/member/manageproduct/index.html
@@ -25,6 +25,7 @@
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
                             <div class="tab-content">
+                                <!--<form role="form" (submit)="addProduct($event)" method="post">-->
                                 <div class="tab-pane active" id="step1">
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -159,7 +160,7 @@
                                             <h5 class="create-ad-label">Title</h5>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                                            <input class="form-control input-custom-field" name="title" value="{{product.title}}" placeholder="Short Description" type="text" />
+                                            <input [(ngModel)]="product.title" class="form-control input-custom-field" name="title" placeholder="Title" type="text" />
                                         </div>
                                     </div>
                                     <div class="row form-group">
@@ -218,6 +219,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!--</form>-->
                             </div>
                         </div>
                     </div>
