--- a/web/html_components/member/profile/editprofile.html
+++ b/web/html_components/member/profile/editprofile.html
@@ -1,7 +1,8 @@
 <div class="row margin-top-align">
     <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
         <ul class="profile-left-sidebar-ul">
-            <li><a class="active" [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
+            <li><a class="active" [routerLink]="['/profile']" (click)="profile($event)">Profile</a></li>
+            <li><a [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
             <li><a [routerLink]="['/uploadimg']" (click)="uploadimg($event)">Upload Profile Picture</a></li>
             <li><a [routerLink]="['/uploaddocument']" (click)="uploaddocument($event)">Profile Verification</a></li>
         </ul>
@@ -9,6 +10,7 @@
     <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
+                <form role="form" (submit)="updateUserprofile($event)" method="post">
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <h3 class="edit-profile-heading">Edit Your Profile</h3>
@@ -19,7 +21,7 @@
                         <h5 class="edit-profile-label">First Name</h5>
                     </div>
                     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <input class="form-control input-custom-field" name="firstName" value="{{user.firstName}}" placeholder="First Name" type="text" />
+                        <input [(ngModel)]="user.firstName" class="form-control input-custom-field" name="firstName" placeholder="First Name" type="text" />
                     </div>
                 </div>
                 <div class="row form-group">
@@ -27,7 +29,7 @@
                         <h5 class="edit-profile-label">Last Name</h5>
                     </div>
                     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <input class="form-control input-custom-field" name="lastName" value="{{user.lastName}}" placeholder="Last Name" type="text" />
+                        <input [(ngModel)]="user.lastName" class="form-control input-custom-field" name="lastName" placeholder="Last Name" type="text" />
                     </div>
                 </div>
                 <div class="row form-group">
@@ -35,22 +37,39 @@
                         <h5 class="create-ad-label">Email</h5>
                     </div>
                     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <input class="form-control input-custom-field" name="email" value="{{user.email}}" placeholder="Email" type="text"/>
+                        <input [(ngModel)]="user.email" class="form-control input-custom-field" name="email" placeholder="Email" type="text"/>
                     </div>
                 </div>
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                        <h5 class="create-ad-label">Cell No.</h5>
+                        <h5 class="create-ad-label">Cell No</h5>
                     </div>
                     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <input class="form-control input-custom-field" name="cellNo" value="{{user.cellNo}}" placeholder="Cell No." type="text"/>
+                        <input [(ngModel)]="user.cellNo" class="form-control input-custom-field" name="cellNo" placeholder="Cell No." type="text"/>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <h5 class="create-ad-label">Password</h5>
+                    </div>
+                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                        <input type="password" [(ngModel)]="user.password" class="form-control input-custom-field" name="password" placeholder="****"/>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <h5 class="create-ad-label">Confirm Password</h5>
+                    </div>
+                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                        <input type="password" [(ngModel)]="user.confirmPassword" class="form-control input-custom-field" name="confirmPassword" placeholder="****"/>
                     </div>
                 </div>
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-offset-8 col-sm-4  col-md-offset-8 col-md-4  col-lg-offset-8 col-lg-4">
-                        <button id="user-profile-edit-button" class="form-control common-custom-button">Submit</button>
+                        <button type="submit" id="user-profile-edit-button" class="form-control common-custom-button">Submit</button>
                     </div>
                 </div>
+                </form>
             </div>
         </div>
     </div>
