--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -1,7 +1,8 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
         <ul class="profile-left-sidebar-ul margin-top-align">
-            <li><a class="active" [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
+            <li><a class="active" [routerLink]="['/profile']" (click)="profile($event)">Profile</a></li>
+            <li><a [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
             <li><a [routerLink]="['/uploadimg']" (click)="uploadimg($event)">Upload Profile Picture</a></li>
             <li><a [routerLink]="['/uploaddocument']" (click)="uploaddocument($event)">Profile Verification</a></li>
         </ul>
@@ -19,7 +20,7 @@
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <img class="img-responsive" src="resources/images/{{user.img}}">
+                            <img class="img-responsive" src="resources/images/profile/{{user.img}}">
                         </div>
                     </div>
                 </div>
