--- a/web/html_components/public/signup.html
+++ b/web/html_components/public/signup.html
@@ -19,6 +19,21 @@
                             <input name="lastName" [(ngModel)]="user.lastName" class="form-control input-custom-field" placeholder="Last Name"/>
                         </div>
                     </div>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <input name="email" [(ngModel)]="user.email" class="form-control input-custom-field" placeholder="Email"/>
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <input type="password" name="password" [(ngModel)]="user.password" class="form-control input-custom-field" placeholder="Password"/>
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <input type="password" name="confirmPassword" [(ngModel)]="user.confirmPassword" class="form-control input-custom-field" placeholder="Confirm Password"/>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="submit" class="form-control common-custom-button">Submit</button> 
