--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -86,7 +86,7 @@
             <div class="product-info-details-right-panel form-group">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                        <h1 class="product-info-details-right-panel-product-title">{{product.title}}</h1>
+                        <h1 class="product-info-details-right-panel-product-title">{{productInfo.title}}</h1>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
                         <h1 class="product-info-details-right-panel-product-price">{{product?.basePriceUnit?.title}}{{product?.basePrice}}</h1>
@@ -323,7 +323,7 @@
                                     </div>
                                     <div class="row form-group">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                            <h3 class="product-info-details-right-panel-product-description">{{product.description}}</h3>
+                                            <h3 class="product-info-details-right-panel-product-description">{{productInfo.description}}</h3>
                                         </div>
                                     </div>
                                 </div>
